till menu icons

--- a/index.html
+++ b/index.html
@@ -5,13 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mexel</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <div class="title-bar"></div>
-        <div class="menu-bar"></div>
-        <div class="menu-icon-bar"></div>
+        <div class="title-bar">Mexel Sheet-1</div>
+        <div class="menu-bar">
+            <div class="home menu-item active ">Home</div>
+            <div class="file   menu-item">File</div>
+            <div class="insert menu-item">Insert</div>
+            <div class="layout menu-item">Layout</div>
+            <div class="help   menu-item">Help</div>
+        </div>
+        <div class="menu-icon-bar">
+            <div class="material-icons menu-icons icon-cut">content_cut</div>
+            <div class="material-icons menu-icons icon-copy">content_copy</div>
+            <div class="material-icons menu-icons icon-paste">content_paste</div>
+            <div class="material-icons menu-icons icon-bold">format_bold</div>
+            <div class="material-icons menu-icons icon-italic">format_italic</div>
+            <div class="material-icons menu-icons icon-align-left">format_align_left</div>
+            <div class="material-icons menu-icons icon-align-center">format_align_center</div>
+            <div class="material-icons menu-icons icon-align-right">format_align_right</div>
+
+        </div>
         <div class="formula-bar"></div>
         <div class="data-container">
             <div class="row-name-container"></div>
