--- a/index.html
+++ b/index.html
@@ -22,11 +22,43 @@
             <div class="material-icons menu-icons icon-cut">content_cut</div>
             <div class="material-icons menu-icons icon-copy">content_copy</div>
             <div class="material-icons menu-icons icon-paste">content_paste</div>
+            <select name="" class="selector font-select">
+                <option style="font-family: Noto Sans;" value="Noto Sans">Noto Sans</option>
+                <option style="font-family:Arial" value="Arial">Arial</option>
+                <option style="font-family:Calibri" value="Calibri">Calibri</option>
+                <option style="font-family:Comic Sans MS" value="Comic Sans MS">Comic Sans MS</option>
+                <option style="font-family:Courier New" value="Courier New">Courier New</option>
+                <option style="font-family:Impact" value="Impact">Impact</option>
+                <option style="font-family:Georgia" value="Georgia">Georgia</option>
+                <option style="font-family:Garamond" value="Garamond">Garamond</option>
+                <option style="font-family:Lato" value="Lato">Lato</option>
+                <option style="font-family:Open Sans" value="Open Sans">Open Sans</option>
+                <option style="font-family:Palatino" value="Palatino">Palatino</option>
+                <option style="font-family:Verdana" value="Verdana">Verdana</option>
+            </select>
+
+            <select class="selector size-select">
+                <option value="10">10</option>
+                <option value="12">12</option>
+                <option value="14">14</option>
+                <option value="16">16</option>
+                <option value="18">18</option>
+                <option value="20">20</option>
+                <option value="22">22</option>
+                <option value="24">24</option>
+                <option value="26">26</option>
+                <option value="28">28</option>
+                <option value="30">30</option>
+                <option value="32">32</option>
+                <option value="34">34</option>
+            </select>
             <div class="material-icons menu-icons icon-bold">format_bold</div>
             <div class="material-icons menu-icons icon-italic">format_italic</div>
             <div class="material-icons menu-icons icon-align-left">format_align_left</div>
             <div class="material-icons menu-icons icon-align-center">format_align_center</div>
             <div class="material-icons menu-icons icon-align-right">format_align_right</div>
+            <div class="material-icons menu-icons icon-color-fill">format_color_fill</div>
+            <div class="material-icons menu-icons icon-color-text">format_color_text</div>
 
         </div>
         <div class="formula-bar"></div>
