wip: ui left for formula bar and data container

--- a/index.html
+++ b/index.html
@@ -67,7 +67,17 @@
             <div class="column-name-container"></div>
             <div class="input-cell-container"></div>
         </div>
-        <div class="sheet-bar"></div>
+        <div class="sheet-bar">
+            <div class="scroller">
+                <div class="material-icons nav-icons icon-left-scroll">arrow_left</div>
+                <div class="material-icons nav-icons icon-right-scroll">arrow_right</div>
+            </div>
+            <div class="material-icons icon-add">add_circle</div>
+            <div class="sheet-tab-container">
+                <div class="sheet-tab">Sheet-1</div>
+            </div>
+
+        </div>
     </div>
 </body>
 </html>
