--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
         </div>
         <div class="formula-bar"></div>
         <div class="data-container">
-            <div class="row-name-container"></div>
+            <div class="select-all"></div>
             <div class="column-name-container"></div>
+            <div class="row-name-container"></div>
             <div class="input-cell-container"></div>
         </div>
         <div class="sheet-bar">
