--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
         <div class="formula-bar"></div>
         <div class="data-container">
             <div class="select-all"></div>
-            <div class="column-name-container"></div>
+            <div class="column-name-container">
+                <div class="column-name">A</div>
+                <div class="column-name">B</div>
+            </div>
             <div class="row-name-container"></div>
             <div class="input-cell-container"></div>
         </div>
