--- a/index.html
+++ b/index.html
@@ -68,8 +68,21 @@
                 <div class="column-name">A</div>
                 <div class="column-name">B</div>
             </div>
-            <div class="row-name-container"></div>
-            <div class="input-cell-container"></div>
+            <div class="row-name-container">
+                <div class="row-name">1</div>
+                <div class="row-name">2</div>
+
+            </div>
+            <div class="input-cell-container">
+                <div class="cell-row">
+                    <div class="input-cell" contenteditable="true"></div>
+                    <div class="input-cell" contenteditable="true"></div>
+                </div>
+                <div class="cell-row">
+                    <div class="input-cell" contenteditable="true"></div>
+                    <div class="input-cell" contenteditable="true"></div>
+                </div>
+            </div>
         </div>
         <div class="sheet-bar">
             <div class="scroller">
