algo added for row and column name

--- a/index.html
+++ b/index.html
@@ -65,17 +65,14 @@
         <div class="data-container">
             <div class="select-all"></div>
             <div class="column-name-container">
-                <div class="column-name">A</div>
-                <div class="column-name">B</div>
+                
             </div>
             <div class="row-name-container">
-                <div class="row-name">1</div>
-                <div class="row-name">2</div>
-
+        
             </div>
             <div class="input-cell-container">
                 <div class="cell-row">
-                    <div class="input-cell" contenteditable="true"></div>
+                    <div class="input-cell col-1 row-1 code-A" contenteditable="true"></div>
                     <div class="input-cell" contenteditable="true"></div>
                 </div>
                 <div class="cell-row">
@@ -96,5 +93,7 @@
 
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
